--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,4 +44,4 @@ workflows:
             - build-job
           filters:
             branches:
-              only: master
+              only: main
