--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           paths:
             - node_modules
           key: node-proj-dep-{{ checksum "package.json" }}
-      - run: node release.js
+      - run: npm run ci_release
 workflows:
   version: 2
   build_and_deploy:
