--- a/ui/support/package.json
+++ b/ui/support/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo no test specified"
+    "test": "echo no test specified",
+    "ci_release": "node ./release.js"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,8 @@
     "@storybook/addon-viewport": "^6.1.0",
     "@storybook/addons": "^6.1.0",
     "@storybook/react": "^6.1.0",
-    "@storybook/source-loader": "^6.1.0"
+    "@storybook/source-loader": "^6.1.0",
+    "octonode": "^0.10.0"
   },
   "devDependencies": {
     "react-styled-components": "^0.1.11"
