--- a/frontends/new_horizon/support/storybook/package.json
+++ b/frontends/new_horizon/support/storybook/package.json
@@ -28,8 +28,7 @@
     "@storybook/addon-viewport": "^6.1.0",
     "@storybook/addons": "^6.1.0",
     "@storybook/react": "^6.1.0",
-    "@storybook/source-loader": "^6.1.0",
-    "octonode": "^0.10.0"
+    "@storybook/source-loader": "^6.1.0"
   },
   "devDependencies": {
     "react-styled-components": "^0.1.11"
