--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ workflows:
       - deploy-master:
           requires:
             - build-job
+          context: Production
           filters:
             branches:
               only: main
