--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,30 @@
 version: 2
 jobs:
-  build-job:
-    docker:
-      - image: circleci/node:10.16.3
-    working_directory: ~/doc-pusher
-    environment:
-      - PATH: /root/node/bin:/root/yarn/bin:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - doc-pusher-{{ .Branch }}-{{ checksum "~/doc-pusher/frontends/new_horizon/yarn.lock" }}-{{checksum "~/doc-pusher/frontends/new_horizon/support/storybook/yarn.lock"}}
-            - doc-pusher-{{ .Branch }}
-      - run: yarn
-      - save_cache:
-          paths:
-            - ~/.cache/yarn
-          key: doc-pusher-{{ .Branch }}-{{ checksum "~/doc-pusher/frontends/new_horizon/yarn.lock" }}-{{checksum "~/doc-pusher/frontends/new_horizon/support/storybook/yarn.lock"}}
   deploy-master:
     docker:
       - image: circleci/node:10.16.3
-    working_directory: ~/doc-pusher/frontends/new_horizon/support/storybook
+    working_directory: /root/doc-pusher/frontends/new_horizon
     environment:
       - PATH: /root/node/bin:/root/yarn/bin:/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin
     steps:
       - checkout:
-          path: ~/doc-pusher
+          path: /root/doc-pusher
       - restore_cache:
           keys:
-            - doc-pusher-{{ .Branch }}-{{ checksum "~/doc-pusher/frontends/new_horizon/yarn.lock" }}-{{checksum "~/doc-pusher/frontends/new_horizon/support/storybook/yarn.lock"}}
+            - doc-pusher-{{ .Branch }}-{{ checksum "yarn.lock" }}-{{checksum "support/storybook/yarn.lock"}}
             - doc-pusher-{{ .Branch }}
       - run: yarn
-      - run: cd ~/doc-pusher/frontends/new_horizon && yarn
+      - run: cd support/storybook && yarn
       - save_cache:
           paths:
             - ~/.cache/yarn
-          key: doc-pusher-{{ .Branch }}-{{ checksum "~/doc-pusher/frontends/new_horizon/yarn.lock" }}-{{checksum "~/doc-pusher/frontends/new_horizon/support/storybook/yarn.lock"}}
-      - run: npm run ci_release
+          key: doc-pusher-{{ .Branch }}-{{ checksum "yarn.lock" }}-{{checksum "support/storybook/yarn.lock"}}
+      - run: cd support/storybook && npm run ci_release
 workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build-job:
-          filters:
-            tags:
-              only: /.*/ # run build job for all branches and all tags push
       - deploy-master:
-          requires:
-            - build-job
           filters:
             branches:
               only: main
